--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,21 @@
+pyramid-kvs (0.2.3) unstable; urgency=low
+
+  * New upstream release
+
+ -- Ismael Tifous <fousti@gandi.net>  Mon, 14 Sep 2015 11:58:13 +0200
+
 pyramid-kvs (0.2.2) unstable; urgency=low
 
   * New upstream version.
 
  -- Guillaume Gauvrit <guillaume@gandi.net>  Tue, 02 Jun 2015 16:51:00 +0200
- 
+
 pyramid-kvs (0.1.1-1~gandi) unstable; urgency=low
 
   * New upstream version.
 
  -- Guillaume Gauvrit <guillaume@gandi.net>  Mon, 29 Sep 2014 14:43:23 +0100
- 
+
 pyramid-kvs (0.1-1~gandi) unstable; urgency=low
 
   * Initial packaging.
